Bug 951908 - Ensure child processes shut down propertly on Macs (r=bent,smichaud)